--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 dist/ filter=lfs diff=lfs merge=lfs -text
-dist/**/*.snap filter=lfs diff=lfs merge=lfs -text
 dist/**/*.AppImage filter=lfs diff=lfs merge=lfs -text
+dist/**/*.debgit filter=lfs diff=lfs merge=lfs -text
+lfs filter=lfs diff=lfs merge=lfs -text
+track filter=lfs diff=lfs merge=lfs -text
+dist/**/*.snap filter=lfs diff=lfs merge=lfs -text
 dist/**/*.deb filter=lfs diff=lfs merge=lfs -text
