--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ lfs filter=lfs diff=lfs merge=lfs -text
 track filter=lfs diff=lfs merge=lfs -text
 dist/**/*.snap filter=lfs diff=lfs merge=lfs -text
 dist/**/*.deb filter=lfs diff=lfs merge=lfs -text
+dist/osx-arm/cortensor-desktop-app-0.0.1.dmg filter=lfs diff=lfs merge=lfs -text
